# build-on-forgotten-runes

./: .gitignore  README.md  SUMMARY.md  wizzypedia-mcp.md
.gitbook/assets/: openapi.json
ai/: deep-dreammaster.md  loracle.md  querying-the-vector-database-and-rag.md
ai/notebooks/: .env.example  loracle-rag.ipynb  pyproject.toml
characters/: 2d-walkcycles-and-spritesheets.md  3d-integrations-models-and-rigs.md  character-artwork-api.md  ip-rights-commercial-and-derivative-works.md
lore/: the-book-of-lore-api.md  the-book-of-lore-protocol.md  wizzypedia.md
smart-contracts/: contract-addresses.md
